# cognimoss-test

./: README.md  gitignore  pyproject.toml  test_results.txt
github/workflows/: tests.yml
golden-goose/: .env.example  README.md  app.py  config.py  extensions.py  forms.py  models.py  requirements.txt  routes.py  scheduler.py
golden-goose/services/: __init__.py  options_service.py  options_signal_service.py  stock_service.py
golden-goose/static/css/: style.css
golden-goose/static/js/: main.js
golden-goose/templates/: about.html  base.html  create_user.html  index.html  options_dashboard.html  users.html
golden-goose/tests/: __init__.py  conftest.py  test_forms.py  test_models.py  test_options_service.py  test_options_signal_service.py  test_routes.py  test_scheduler.py  test_stock_service.py  test_watchlist.py
